made cards from modals

--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Index.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Index.cshtml
@@ -2,7 +2,13 @@
     ViewBag.Title = "Maximo workorders";
 }
 <div class="card">
-    <h4>Maximo</h4>
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Workorders
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+
     <div class="card-body">
         <p>
             <a href="~/Maximo_ui/Workorder/Workorders" class="btn btn-primary btn-sm">WorkordersOnLocation &raquo;</a>
