--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -2,8 +2,8 @@
 
 
 <div class="card">
-    <div class="card-header bg-info">
-        <h6 class="card-title text-white">
+    <div class="card-header bg-light">
+        <h6 class="card-title text-black-50">
             Workorders
             <a class="fas fa-wrench text-black-50"  href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
             <a class="far fa-window-restore text-black-50" id="goToWorkordersHyperlink" href="#"></a>
