--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
@@ -2,7 +2,13 @@
     ViewBag.Title = "Maximo wo details";
 }
 <div class="card">
-    <h4>Maximo wo details</h4>
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Maximo wo details
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+
     <div class="card-body">
         <p>
             <a href="~/Maximo_ui/WorkorderDetails/WoDetails?wonum=9709594" class="btn btn-primary btn-sm">Workoderdetails &raquo;</a>
