--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/WoDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/WoDetails.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "WoDetails";
 }
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4>WoDetails @ViewBag.wonum</h4>
+    <div class="card-header bg-dark">
+        <h4 class="card-title text-white" >WoDetails @ViewBag.wonum</h4>
     </div>
 
     <div class="card-body">
