--- a/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
@@ -1,8 +1,8 @@
 ﻿@model EqUiWebUi.Models.LogInfo
 
-<div class="modal-header">
+<div class="card-header">
 
-    <div class="alert">
+    <div class="alert alert-info">
         <h4>Information about <a class="far fa-window-restore text-black-50" href='@Url.Action("MoreInfo","Table",Model)'></a></h4>
         <div class="row">
            
@@ -11,23 +11,21 @@
                 <div class="text-muted">
                     Logcode: <strong>@Model.errornum</strong> Logtext: <strong>@Model.logtext.Trim()</strong> 
                 </div>
-
             </div>
 
             <div class="col-sm-1">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-
+                <a class="far fa-window-close fa-3x clickable text-black-50" data-dismiss="modal"></a>
             </div>
 
         </div>
     </div>
 </div>
 
-<div class="modal-body">
+<div class="card-body">
     @Html.Partial("../Chart/_getErrorTrend", Model)
-
+    
+    <hr />
+    
     @*if the logtype is an alert it is redirected to the alert area.
         all other logtypes are run via equi.GetErrorInfoData*@
     @if (Model.logtype == "ALERT")
@@ -50,11 +48,13 @@
         @Html.Action("_loginfo", Model)
     }
 
+    <hr />
+    
     @Html.Action("_workordersOnLocation", "Workorder", new { area = "Maximo_ui", location = Model.location })
 
 </div>
 
-<div class="modal-footer">
+<div class="card-footer">
     @if (Model.logtype == "BREAKDOWN")
     {
         @Html.ActionLink("JobDetails", "rtJob", "Breakdown", new { area = "VASC", jobID = Model.refid }, new { @class = "btn btn-primary btn-sm" })
