--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
@@ -4,35 +4,35 @@
 }
 
 <div class="card @((!string.IsNullOrWhiteSpace(ViewBag.DESCRIPTION) || !string.IsNullOrWhiteSpace(ViewBag.LongDescription)) ? "shown":"hidden")">
-    <div class="card-header bg-primary">
-        <h6>
+    <div class="card-header bg-info">
+        <h6 class="card-title">
             Description:
             <strong>@ViewBag.DESCRIPTION</strong>
         </h6>
     </div>
 
-    <div class="card @(!string.IsNullOrWhiteSpace(ViewBag.LongDescription) ? "shown":"hidden")">
+    <div class="card-body @(!string.IsNullOrWhiteSpace(ViewBag.LongDescription) ? "shown":"hidden")">
         @Html.Raw(ViewBag.LongDescription)
     </div>
 </div>
 
 <div class="card @((!string.IsNullOrWhiteSpace(ViewBag.REMARKDESC) || !string.IsNullOrWhiteSpace(ViewBag.FailureRemark)) ? "shown":"hidden")">
-    <div class="card-header bg-primary">
-        <h6>
+    <div class="card-header bg-info">
+        <h6 class="card-title">
             FailureRemark:
             <strong> @ViewBag.REMARKDESC</strong>
         </h6>
     </div>
 
-    <div class="panel-body  @(!string.IsNullOrWhiteSpace(ViewBag.FailureRemark) ? "shown":"hidden")">
+    <div class="card-body  @(!string.IsNullOrWhiteSpace(ViewBag.FailureRemark) ? "shown":"hidden")">
         @Html.Raw(ViewBag.FailureRemark)
     </div>
 </div>
 
 
 <div class="card shown">
-    <div class="card-header bg-primary">
-        <h6>
+    <div class="card-header bg-info">
+        <h6 class="card-title">
             ReportedBy:
             <strong> @ViewBag.REPORTEDBY</strong>
         </h6>
@@ -40,8 +40,10 @@
 </div>
 
 <div class="card @(Model.Data.Count() != 0 ? "shown":"hidden")">
-    <div class="card-header bg-primary">
-        <h6>Labor</h6>
+    <div class="card-header bg-info">
+        <h6 class="card-title">
+            Labor
+        </h6>
     </div>
     <div class="card-body">
         @{
@@ -50,29 +52,27 @@
         }
 
         @grid.GetHtml(
-                                             htmlAttributes: new { id = "gridMapping", style = "font-size: 12px" },
-                                             tableStyle: "table table-striped grid-table",
-                                             headerStyle: "grid-header-title",
-                                             footerStyle: "grid-footer",
-                                             alternatingRowStyle: "webgrid-alternating-row",
-                                             selectedRowStyle: "grid-row grid-row-selected",
-                                             rowStyle: "grid-row",
-                                             mode: WebGridPagerModes.All,
-                                             firstText: "<< First",
-                                             previousText: "< Prev",
-                                             nextText: "Next >",
-                                             lastText: "Last >>",
-                                             columns: ViewBag.LABORColumns
-                                 )
+                                                  htmlAttributes: new { id = "gridMapping", style = "font-size: 12px" },
+                                                  tableStyle: "table table-striped grid-table",
+                                                  headerStyle: "grid-header-title",
+                                                  footerStyle: "grid-footer",
+                                                  alternatingRowStyle: "webgrid-alternating-row",
+                                                  selectedRowStyle: "grid-row grid-row-selected",
+                                                  rowStyle: "grid-row",
+                                                  mode: WebGridPagerModes.All,
+                                                  firstText: "<< First",
+                                                  previousText: "< Prev",
+                                                  nextText: "Next >",
+                                                  lastText: "Last >>",
+                                                  columns: ViewBag.LABORColumns
+                                      )
     </div>
 </div>
 
 @*inform user that this is a realtime connection*@
 @if (ViewBag.RealtimeConn)
 {
-    <div class="label">
-        <div class="label label-danger">
-            RT
-        </div>
+    <div class="badge badge-danger">
+        RT
     </div>
 }
