--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<EqUiWebUi.Areas.Maximo_ui.Models.Workorder>
 
-<div class="card-header bg-primary">
-    <div class="card-header bg-primary">
+<div class="card">
+    <div class="card-header bg-dark">
         <h4>WoDetails <strong>@ViewBag.parentwonum</strong> (parent)</h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
@@ -12,8 +12,8 @@
 
 </div>
 
-<div class="panel panel-warning">
-    <div class="card-header bg-primary">
+<div class="card">
+    <div class="card-header bg-info">
         <h4>WoDetails <strong>@ViewBag.parentwonum</strong> (childeren)</h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
@@ -22,7 +22,7 @@
         @foreach (EqUiWebUi.Areas.Maximo_ui.Models.Workorder subWo in Model)
         {
             <div class="card">
-                <div class="card-header bg-primary">
+                <div class="card-header bg-light">
                     <h6>WoDetails wo:<strong>@subWo.WONUM</strong>  location:<strong>@subWo.LOCATION</strong>  Ownergroup:<strong>@subWo.OWNERGROUP</strong> status:<strong>@subWo.STATUS</strong> (child)</h6>
                 </div>
 
